--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 						<image>eclipse-temurin:21-jre-jammy</image>
 					</from>
 					<to>
-						<image>registry.hub.docker.com/prashanthv124/first-jenkinsspringboot-demo</image>
+						<image>registry.hub.docker.com/prashanthv124/first-jenkinsspringboot-demo:v1</image>
 					</to>
 				</configuration>
 			</plugin>
