--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,6 @@ jobs:
     - name: Build and push Docker image
       run: mvn clean compile jib:build
       env:
-           REGISTRY_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-           REGISTRY_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_ACCESS_TOKEN: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
 
