--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,9 +29,15 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn test
-    - name: Build and push Docker image
-      run: mvn clean compile jib:build
-      env:
-          DOCKER_ACCESS_TOKEN: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+
+    - name: Build & push Docker image
+    - uses: mr-smithers-excellent/docker-build-push@v6
+      with:
+          image: prashanthv124/githubdemo
+          tags: v1
+          registry: docker.io
+          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
 
