--- a/pom.xml
+++ b/pom.xml
@@ -36,20 +36,21 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-			<plugin>
-				<groupId>com.google.cloud.tools</groupId>
-				<artifactId>jib-maven-plugin</artifactId>
-				<version>3.4.1</version>
-				<configuration>
-					<from>
-						<image>eclipse-temurin:21-jre-jammy</image>
-					</from>
-					<to>
-						<image>registry.hub.docker.com/prashanthv124/githubdemo</image>
-					</to>
-				</configuration>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>com.google.cloud.tools</groupId>-->
+<!--				<artifactId>jib-maven-plugin</artifactId>-->
+<!--				<version>3.4.1</version>-->
+<!--				<configuration>-->
+<!--					<from>-->
+<!--						<image>eclipse-temurin:21-jre-jammy</image>-->
+<!--					</from>-->
+<!--					<to>-->
+<!--						<image>registry.hub.docker.com/prashanthv124/jibproject:v1</image>-->
+<!--					</to>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
 		</plugins>
+		<finalName>githubdemo</finalName>
 	</build>
 
 </project>
