--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,5 +30,14 @@ jobs:
     - name: Build with Maven
       run: mvn test
 
+    - name: Build & push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image : prashanthv124/githubdemo
+        tags : latest
+        registry : registry.hub.docker.com
+        dockerfile : Dockerfile
+        username : ${{ secrets.DOCKER_USERNAME }}
+        password : ${{ secrets.DOCKER_PASSWORD }}
 
 
